crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@48.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('1', 'strict $.a', silent => true);"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..57
    FuncCall@7..57
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..27
        Sconst@24..27 "'1'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..41
        Sconst@29..41 "'strict $.a'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      NamedArgExpr@43..57
        Ident@43..49 "silent"
        Whitespace@49..50 " "
        EqualsGreater@50..52 "=>"
        Whitespace@52..53 " "
        AConst@53..57
          TrueP@53..57 "true"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

