crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@53.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{}', 'lax $.a');"
---
SelectStmt@0..41
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..28
        Sconst@24..28 "'{}'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..39
        Sconst@30..39 "'lax $.a'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

