crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@56.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('1', 'strict $[1]');"
---
SelectStmt@0..44
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..42
    FuncCall@7..42
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..27
        Sconst@24..27 "'1'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..42
        Sconst@29..42 "'strict $[1]'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

