crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@58.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[]', 'strict $[1]');"
---
SelectStmt@0..45
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..43
    FuncCall@7..43
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..28
        Sconst@24..28 "'[]'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..43
        Sconst@30..43 "'strict $[1]'"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

